// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`testResponseHeader should add test for required response header 1`] = `
Array [
  "// Validate if response header is present 
pm.test(\\"[GET]::/crm/companies/:id - Response header x-apideck-app-id is present\\", function () {
   pm.response.to.have.header(\\"x-apideck-app-id\\");
});
",
]
`;

exports[`testResponseHeader should add test for response header 1`] = `
Array [
  "// Validate if response header is present 
pm.test(\\"[GET]::/crm/companies/:id - Response header x-apideck-app-id is present\\", function () {
   pm.response.to.have.header(\\"x-apideck-app-id\\");
});
",
]
`;

exports[`testResponseHeader should add test with separator symbol for response header 1`] = `
Array [
  "// Validate if response header is present 
pm.test(\\"[GET]==/crm/companies/:id - Response header x-unify-request-id is present\\", function () {
   pm.response.to.have.header(\\"x-unify-request-id\\");
});
",
]
`;
